--- a/tos.html
+++ b/tos.html
@@ -25,7 +25,7 @@
                 We have filters in place to prevent results from being inappropriate however
                 these filters aren't always perfect. Should any generation have a result unsuitable for you -- a destroy button is always avalible.<br><br>
                 
-                We reseve the right to ban anyone for any reason, however you are always welcome to shoot us an email at <b>example@example.com</b><br><br>
+                We reseve the right to ban anyone for any reason, however you are always welcome to shoot us an email at <b>contactnailai@gmail.com</b><br><br>
                 NAIL <strong>is not</strong> responsible for any actions of our users while using our services or any outcomes that result from using our service.<br>
 
                 </p>
