changed some things

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             </form>
 
         </div>
+        
+        <div class="index_main">
+            <img class="index_image" src="./images/logo.png" alt="NAIL Logo">
 
+        </div>
         
 
     </body>
