--- a/index.html
+++ b/index.html
@@ -12,21 +12,10 @@
 
     <body>
 
-        <div class="nav">
-            <a class="button_home" href="index.html">na2il</a>
-            <!-- <a class="invite_bot_button" href="https://discord.com/api/oauth2/authorize?client_id=981303820095217724&permissions=2147483648&scope=bot">Invite Bot</
-            -->
-            <form class="button_test" action="https://discord.com/api/oauth2/authorize?client_id=981303820095217724&permissions=2147483648&scope=bot">
-                <input type="submit" value="Invite">
-            </form>
-
+        <div class="header">
+            <p class="smalltitle"><b>Not very good at web development (yet). Still working on this page!</b></p>
+            <p class="data">Need to talk? Contact me at <strong>stellar#4677</strong> or email me at <strong>contactnailai@gmail.com</strong></p>
         </div>
-        
-        <div class="index_main">
-            <img class="index_image" src="./images/logo.png" alt="NAIL Logo">
-
-        </div>
-        
 
     </body>
 
