--- a/tos.html
+++ b/tos.html
@@ -31,6 +31,8 @@
                 <li>Do not attempt to sell results of the image generation.</li>
                 <li>Do not attempt to pass off results of the image generation as your own.</li>
                 <li>Do not attempt to generate anything that may resemble a child, <strong>no matter the context.</strong></li>
+                <li>Do not attempt to generate anything that may resemble animal cruelty.</li>
+                <li>Do not attempt to generate anything that may resemble anything illegal.</li>
                 <li>Do not attempt to generate anything that may infringe on someone else's copyright.</li>
             </ul>
             <p class="applicable_law"><strong>Applicable Law</strong></p>
