--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
             </ul>
 
             <p class="smalltitle"><strong>How are you protecting this data?</strong></p>
-            <p class="data">Every piece of data is stored in a single database that only I have access to.<br>Data relating to your Discord ID may be shared to Discord if you attempt to generate illegal content.</p>
+            <p class="data">Every piece of data is stored in a single database that only I have access to.<br>Data relating to your Discord ID may be shared to Discord if you attempt to generate illegal content.<br>This data is not kept permanently and will be deleted after a days.</p>
 
             <p class="smalltitle"><strong>How can I get a copy of data stored on me?</strong></p>
             <p class="data">You can reach me personally on discord at <b>stellar#4677</b> or email us at <b>contactnailai@gmail.com</b></p>
