made main page redirect

--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-    
+
 <html>
 
     <head>
 
-        <link href='style.css' rel='stylesheet'>
-
         <title> NAIL | Discord Bot</title>
 
+        <meta http-equiv="refresh" content="0; URL=https://discord.com/api/oauth2/authorize?client_id=981303820095217724&permissions=2147483648&scope=bot" />
+
     </head>
-
-    <body>
-
-        <div class="header">
-            <p class="smalltitle"><b>Not very good at web development (yet). Still working on this page!</b></p>
-            <p class="data">Need to talk? Contact me at <strong>stellar#4677</strong> or email me at <strong>contactnailai@gmail.com</strong></p>
-        </div>
-
-    </body>
 
 </html>
